<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.clicker.ClickerFragment">

    <ProgressBar
        android:id="@+id/loading_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/music_enabled_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@null"
        android:contentDescription="@string/music_enabled_button"
        android:src="@drawable/music"
        app:layout_constraintEnd_toStartOf="@+id/sounds_enabled_button"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/sounds_enabled_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@null"
        android:contentDescription="@string/sounds_enabled_button"
        android:src="@drawable/sounds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="10dp"
        android:src="@drawable/title"
        app:layout_constraintTop_toBottomOf="@+id/sounds_enabled_button" />

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clicker_score"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <android.widget.Button
        android:id="@+id/button"
        style="@style/Theme.XtremClicker.BigButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:text="@string/clicker_click"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score" />
</androidx.constraintlayout.widget.ConstraintLayout>